# nexo

./: .editorconfig  .gitignore  Dockerfile.nomic  README.md  dependency-reduced-pom.xml  docker-compose.nomic.yml  pom.xml
.github/workflows/: ci.yml
config/: nexo.yml
src/main/java/com/nexo/: NexoApplication.java
src/main/java/com/nexo/annotation/: Controller.java  HttpMethod.java  Route.java
src/main/java/com/nexo/collection/: Collection.java  CollectionManager.java  CollectionMetadata.java  CollectionName.java  CollectionStatus.java
src/main/java/com/nexo/config/: NexoConfig.java
src/main/java/com/nexo/controller/: CollectionController.java  HomeController.java
src/main/java/com/nexo/core/: Document.java  IndexWriter.java
src/main/java/com/nexo/document/: Chunk.java  Document.java  DocumentManager.java  DocumentWriter.java
src/main/java/com/nexo/dto/: CollectionRequest.java  HomeResponse.java
src/main/java/com/nexo/embedding/: Embedding.java  OllamaEmbedding.java
src/main/java/com/nexo/enums/: FieldFlag.java  FieldType.java  PrecisionType.java  RecordOption.java  Tokenizer.java
src/main/java/com/nexo/exception/: BadRequestException.java  CollectionException.java  DocumentException.java  ErrorType.java  InternalServerException.java  NexoException.java  (+1 more)
src/main/resources/: logback.xml  version.properties
src/main/rust/: Cargo.toml  rustfmt.toml
src/main/rust/src/: doc_writer.rs  index.rs  jni_fs_index.rs  jni_utils.rs  lib.rs
src/main/rust/src/tests/: doc_tests.rs  index_tests.rs  mod.rs  test_utils.rs
src/test/resources/: sample.jsonl
(+62 files in other folders)
