[package]
name = "tantivy4j"
version = "0.1.0"
edition = "2021"

[lib]
name = "tantivy4j"
crate-type = ["cdylib"]

[dependencies]
jni                  = "0.21.1"
tantivy              = "0.25.0"
serde                = { version = "1.0", features = ["derive"] }
serde_json           = "1.0"
log                  = "0.4.27"
thiserror = "1.0.69"

[dev-dependencies]
lazy_static = "1.4"
tempfile = "3.8"
serial_test = "2.0"